<resources>
    <string name="app_name">TrenulMeu <b>Mobile</b></string>
    <string name="app_slogan">The first real Romanian Rail App.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_trains">Trains</string>
    <string name="title_details">Train Details</string>
    <string name="title_station">Station</string>
    <string name="title_platform">Platform</string>
    <string name="title_routes">From A to B…</string>
    <string name="title_train_glance">At A Glance</string>
    <string name="title_train_service">On-board Services</string>
    <string name="title_train_path">Train Path</string>
    <string name="title_train_map">Train Map</string>
    <string name="title_train_availability">Train Availability</string>
    <string name="title_train_alarm">Set Train Alarm</string>

    <string name="error_database_open">Error opening the Database! Please restart the application in order to re-download the database.</string>
    <string name="error_database_expired">Database is Expired, thus information may not be accurate and some features may not work. Please check periodically for updates.</string>
    <string name="error_database_download">Database download failed! Please restart the application in order to get a new database.</string>
    <string name="error_database_no_internet">You have no Database installed, nor do you have an Internet connection. You need to download a database before your first use of the application. Please restart the application when you have Internet in order to Donwload the database.</string>
    <string name="error_routes_download">An Error occurred while getting the Routes:</string>
    <string name="error_routes_no_items_1">No Routes were found!</string>
    <string name="error_routes_no_items_2">Consider checking from a different hour.</string>

    <string name="how_to_routes">Select two Stations and the Date then press the Green Arrow Icon on Top to search.</string>

    <string name="placeholder">Placeholder</string>
    <string name="placeholder_type">TrainType</string>
    <string name="placeholder_name">99999</string>
    <string name="placeholder_selection">99 / 99</string>
    <string name="placeholder_station">Station Name</string>
    <string name="placeholder_station_long">Long Station Name Hbf</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_time_days">+1</string>
    <string name="placeholder_date">30/12/16</string>
    <string name="placeholder_datetime">30/12/16 29:59</string>
    <string name="placeholder_km">999.99</string>
    <string name="placeholder_number">9</string>
    <string name="placeholder_operator">Operator Name</string>

    <string name="menu_routes">Routes</string>
    <string name="menu_trains">Trains</string>
    <string name="menu_stations">Stations</string>
    <string name="menu_status">Status</string>

    <string name="hint_train">Train Number</string>
    <string name="hint_station">Station Name</string>

    <string name="service_c1">First</string>
    <string name="service_c2">Economy</string>
    <string name="service_d1">Sleeper</string>
    <string name="service_d6">6-Berth</string>
    <string name="service_d4">4-Berth</string>
    <string name="service_b">Bistro</string>
    <string name="service_r">Restaurant</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_short_monday">M</string>
    <string name="day_short_tuesday">T</string>
    <string name="day_short_wednesday">W</string>
    <string name="day_short_thursday">T</string>
    <string name="day_short_friday">F</string>
    <string name="day_short_saturday">S</string>
    <string name="day_short_sunday">S</string>

    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="datetime_now">Now</string>
    <string name="datetime_p15m">+15 Min</string>
    <string name="datetime_p1h">+1 Hour</string>
    <string name="datetime_p1d">+1 Day</string>
    <string name="datetime_m15m">-15 Min</string>
    <string name="datetime_m1h">-1 Hour</string>
    <string name="datetime_m1d">-1 Day</string>

    <string name="filter_train_now">Display only Trains running now</string>
    <string name="filter_path">Display only Stops</string>
    <string name="filter_platform_stops">Only Stops</string>

    <string name="logo">Logo</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="downloading_database">Downloading new Database</string>
    <string name="filter">Filter</string>
    <string name="divider">Divider</string>
    <string name="filter_operators">Select Operators</string>
    <string name="operators">Operators</string>
    <string name="go">Go</string>
    <string name="types">Types</string>
    <string name="type">Type</string>
    <string name="section_glance" />
    <string name="toggle">Toggle</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="time">Time</string>
    <string name="dates">Dates</string>
    <string name="km">KM</string>
    <string name="time_in">Arr.</string>
    <string name="time_out">Dep.</string>
    <string name="station">Station</string>
    <string name="position">Pos.</string>
    <string name="departures">Departures</string>
    <string name="arrivals">Arrivals</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="arrivals_min">Arr.</string>
    <string name="departures_min">Dep.</string>
    <string name="time_blank">--.--</string>
    <string name="change">Change</string>
    <string name="flip">Flip</string>
    <string name="alarm_msg">Train %1$s arrives at %2$s in %3$s minutes.</string>
    <string name="alarm_msg_1">Announce me when the train will arrive in</string>
    <string name="set">Set</string>
    <string name="empty_time">--:--</string>
    <string name="just">Just</string>
    <string name="minutes_before">Minutes before.</string>
    <string name="default_mins">5</string>
    <string name="dash">-</string>
    <string name="total_time">Total Time</string>
    <string name="changes">Changes</string>
    <string name="placeholder_delay">+999</string>
    <string name="load_delays">Load Delays</string>
    <string name="error_delay_available">Delay information not Available</string>
    <string name="error_delay">Something went wrong while getting Delay</string>
    <string name="no_delay">No Delay!</string>
    <string name="loading_delays">Loading Delays</string>
    <string name="minutes_delay">Minutes Delay</string>
    <string name="operator">Operator</string>
    <string name="done">Done</string>
</resources>
