<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_routes"
            android:icon="@drawable/menu_routes"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/menu_trains"
            android:icon="@drawable/menu_trains"
            android:title="@string/menu_trains" />
        <item
            android:id="@+id/menu_stations"
            android:icon="@drawable/menu_stations"
            android:title="@string/menu_stations" />
        <item
            android:id="@+id/menu_status"
            android:icon="@drawable/menu_status"
            android:title="@string/menu_status" />
    </group>

</menu>
