<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/item_platform_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/from"
                android:layout_gravity="center"
                android:id="@+id/item_platform_header_txt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/arrivals_min"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/departures_min"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_platform_type"
                android:layout_gravity="center"
                android:src="@drawable/type2"
                android:contentDescription="@string/placeholder"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_name"
                android:id="@+id/item_platform_name"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_station"
                android:id="@+id/item_platform_station"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_time"
                android:id="@+id/item_platform_in"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/placeholder_time"
                android:id="@+id/item_platform_out"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:textSize="@dimen/text_medium"
                android:layout_marginLeft="5dp" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/item_platform_divider"
        android:background="@color/divider"
        android:contentDescription="@string/divider"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" />

</LinearLayout>