<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/filter"
            android:layout_gravity="center"
            android:src="@drawable/datetime"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datetime"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle|end"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/datetime_date"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/date"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_date"
                    android:id="@+id/datetime_date_text"
                    android:gravity="center_vertical|end"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/go"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:contentDescription="@string/go" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/datetime_time"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/time"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_time"
                    android:id="@+id/datetime_time_text"
                    android:gravity="center_vertical|end"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/go"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:contentDescription="@string/go" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_m1d"
                android:id="@+id/datetime_m1d"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_m1h"
                android:id="@+id/datetime_m1h"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_m15m"
                android:id="@+id/datetime_m15m"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_now"
                android:id="@+id/datetime_now"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_p15m"
                android:id="@+id/datetime_p15m"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_p1h"
                android:id="@+id/datetime_p1h"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datetime_p1d"
                android:id="@+id/datetime_p1d"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/placeholder"
            android:layout_weight="1"
            android:minWidth="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/done"
            android:id="@+id/done"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</LinearLayout>