<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="3">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/path_header">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/km"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/position"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_in"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/station"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_out"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder_km"
            android:id="@+id/path_km"
            android:layout_gravity="center_vertical|right"
            android:typeface="monospace"
            android:textSize="@dimen/text_medium" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/path_pos"
            android:contentDescription="@string/position"
            android:layout_gravity="center"
            android:src="@drawable/path_int_stop"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder_time"
            android:id="@+id/path_in"
            android:layout_gravity="center"
            android:typeface="monospace"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder_station"
            android:id="@+id/path_station"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder_time"
            android:id="@+id/path_out"
            android:layout_gravity="center"
            android:typeface="monospace"
            android:textSize="@dimen/text_medium" />

    </TableRow>

</TableLayout>